big ball of stuff, too lazy to split
Mainly, the details surrounding H2 and logging are what I'm after.